removed README.md

--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+This is a modified version of AT&T hoc
+with readline prompts, engineering suffixes and complex numbers
+
 /****************************************************************
 Copyright (C) AT&T 1995
 All Rights Reserved
